service.yaml
apiVersion: v1
kind: Service
metadata:
  name: color-app-service
spec:
  type: NodePort
  selector:
    app: color-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
